--- a/day9/day9_practice.Rmd
+++ b/day9/day9_practice.Rmd
@@ -18,8 +18,52 @@ for(col in 1:4) {
   - take a vector of numbers as input
   - return the log of the largest non-NA value
   - Try this out on a vector that you make up
-  
-  
+
+```{r}
+myfunc <- function(x) {
+  x <- x[which(!is.na(x))]
+  output <- log(max(x))
+  output
+}
+
+myfunc(1:10)
+myfunc(c(2, 10, 3, 4.1))
+myfunc(c(2, 10, 3, 14.1))
+
+```
+
+
 3. Run this function over rows of the data from #1
 
+```{r}
+miris$result <- apply(miris[, 1:4], 1, myfunc)
+
+# dplyr way
+miris <- miris %>%
+  rowwise() %>%
+  mutate(result2 = myfunc(c(Sepal.Length, Sepal.Width, Petal.Length, Petal.Width)))
+
+```
+
+
 4. Write a function that will get the standard error of a vector of numbers. Use that function to get a standard error for each measure for each Species in the data from #1 (ignoring NAs)
+
+```{r}
+std.err <- function(x, ignore.na = TRUE) { 
+  if(!ignore.na) {
+    output <- sd(x)/sqrt(length(x)) 
+  } else {
+    numer <- sd(x, na.rm = TRUE)
+    denom <- sqrt(length(which(!is.na(x))))
+    output <- numer/denom
+  }
+  output
+}
+
+miris %>% 
+  melt(id.vars = "Species") %>%
+  group_by(Species, variable) %>%
+  summarize(SE = std.err(value))
+
+```
+
